fixed footer mis-alignment

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -265,7 +265,7 @@ padding: 0;
    box-shadow: none;
    margin-left: 0px;
    margin-bottom: 10px;
-   padding: 10px 10px 2px 10px;
+   padding: 10px 10px 10px 10px;
 }
 
 .message-workshop-image{
